docs/assets/css/style.scss
---
---

@import "{{ site.theme }}";

// h1.project-name, h1.site-title, header .project-name, .site-header, .page-header {
//     display: none !important;
// }

body{
    background-color: #1B1F23;
    color: white;
}

// Navbar CSS
.head-nav {
    display: grid;
    grid-auto-flow: column;
    list-style: none;
    margin: 0;
    padding: 0;
    border-radius: 10px;
    text-align: center;
    justify-content: center;
    font-size:16px;
}

// Other CSS
.page-header{
    background-color: #262A2D !important;
    background-image: none;
}

// Page resize
@media screen and (max-width: 42em) {
    .head-nav {
        grid-auto-flow: row;
    }
}

